[gd_scene load_steps=13 format=3 uid="uid://cl2obvg7njald"]

[ext_resource type="Script" path="res://Interface/Remove_Decor_Menu.gd" id="1_k1vnm"]
[ext_resource type="Texture2D" uid="uid://c0hixiqotujae" path="res://Interface/Menu_Background.png" id="2_sdlvj"]
[ext_resource type="FontFile" uid="uid://du5v7o0vymbvu" path="res://Objects/Projectiles/Interface/Fonts/Main_Font.ttf" id="3_s8u4e"]
[ext_resource type="Texture2D" uid="uid://cvl2x7fnqxbbf" path="res://Interface/Buttons/Rectangle/Button_Rect_Normal.png" id="4_bhch0"]
[ext_resource type="Texture2D" uid="uid://dir8wjgwb6hd7" path="res://Interface/Buttons/Rectangle/Button_Rect_Focused.png" id="5_3pr5q"]
[ext_resource type="Texture2D" uid="uid://bfj4b8r71gsnw" path="res://Objects/Projectiles/Interface/Currency/Coin_Icon.png" id="6_ycmxc"]
[ext_resource type="AudioStream" uid="uid://dkrmh8xw0xowo" path="res://Audio/SFX/Tree_Chop.mp3" id="7_ov7g5"]
[ext_resource type="EventAsset" uid="uid://b7cbjbcis88jm" path="res://addons/FMOD/editor/resources/events/{63243b9a-9af9-446e-858b-8ca4d6bc1335}.tres" id="8_bbj6g"]

[sub_resource type="LabelSettings" id="LabelSettings_wn18k"]
font = ExtResource("3_s8u4e")
font_size = 91
outline_size = 10
outline_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5edki"]
font = ExtResource("3_s8u4e")
font_size = 226
outline_size = 10
outline_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="Animation" id="Animation_8ddef"]
resource_name = "Toggle"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -856), Vector2(0, 119.2), Vector2(0, -200.533), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Remove:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cancel:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_evu4d"]
_data = {
"Toggle": SubResource("Animation_8ddef")
}

[node name="Remove_Decor_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -856.0
offset_bottom = -856.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1vnm")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(908.76, 526.14)
scale = Vector2(0.531, 0.348981)
texture = ExtResource("2_sdlvj")

[node name="Header" type="Label" parent="."]
layout_mode = 0
offset_left = 539.76
offset_top = 306.28
offset_right = 1316.76
offset_bottom = 402.28
text = "Remove......"
label_settings = SubResource("LabelSettings_wn18k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remove" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 591.76
offset_top = 513.28
offset_right = 1375.76
offset_bottom = 849.28
scale = Vector2(0.365, 0.365)
disabled = true
texture_normal = ExtResource("4_bhch0")
texture_hover = ExtResource("5_3pr5q")
texture_focused = ExtResource("5_3pr5q")

[node name="CoinIcon" type="Sprite2D" parent="Remove"]
position = Vector2(142, 152)
scale = Vector2(0.645, 0.645)
texture = ExtResource("6_ycmxc")

[node name="Cost" type="Label" parent="Remove"]
layout_mode = 0
offset_left = 228.0
offset_top = 46.0
offset_right = 755.0
offset_bottom = 277.0
text = "100
"
label_settings = SubResource("LabelSettings_5edki")
vertical_alignment = 1

[node name="Cancel" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 982.76
offset_top = 513.28
offset_right = 1766.76
offset_bottom = 849.28
scale = Vector2(0.365, 0.365)
disabled = true
texture_normal = ExtResource("4_bhch0")
texture_hover = ExtResource("5_3pr5q")
texture_focused = ExtResource("5_3pr5q")

[node name="Cost" type="Label" parent="Cancel"]
layout_mode = 0
offset_left = 65.7537
offset_top = 52.0548
offset_right = 784.754
offset_bottom = 283.055
scale = Vector2(0.935, 0.935)
text = "Nevermind"
label_settings = SubResource("LabelSettings_5edki")
vertical_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_evu4d")
}

[node name="Audio" type="Node" parent="."]

[node name="Cut_Tree" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_ov7g5")

[node name="ButtonPress" type="StudioEventEmitter3D" parent="Audio"]
event = ExtResource("8_bbj6g")

[connection signal="pressed" from="Remove" to="." method="remove_object"]
[connection signal="pressed" from="Cancel" to="." method="cancel"]
[connection signal="current_animation_changed" from="Anim" to="." method="_on_anim_current_animation_changed"]
